--- a/haskell-template.cabal
+++ b/haskell-template.cabal
@@ -22,11 +22,9 @@ extra-source-files:
   README.md
 
 common shared
-  build-depends:
-    , base          >=4.13.0.0 && <4.18.0.0.0
-
-  hs-source-dirs:     src
-  default-language:   Haskell2010
+  build-depends:    base >=4.13.0.0 && <4.18.0.0.0
+  hs-source-dirs:   src
+  default-language: Haskell2010
 
 executable haskell-template
   import:  shared
