--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,8 +4,6 @@
   "recommendations": [
     "haskell.haskell",
     "arrterian.nix-env-selector",
-    "bbenoist.nix",
-    "jnoortheen.nix-ide",
-    "tamasfe.even-better-toml"
+    "bbenoist.nix"
   ]
 }
