--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,7 +3,7 @@
   // for the documentation about the extensions.json format
   "recommendations": [
     "haskell.haskell",
-    "arrterian.nix-env-selector",
+    "mkhl.direnv",
     "bbenoist.nix"
   ]
 }
